# SI_SOFT

./: .gitignore  README.md  package-lock.json  package.json
01a_Text-based_Data_Formats/js/: package-lock.json  package.json  parse.js
02._Text-based_Data_Formats/: me.csv  me.xml  me.yaml
02._Text-based_Data_Formats/js/: package-lock.json  parse.js
02._Text-based_Data_Formats/py/: parse.py
04a_Server-sent_events/node/: package.json
06a_WebSocket/node/: client.js  package.json
08b_DLS_Documentation/: README.md
10a_Database_Documentation/: README.md  schema.dbml
10b_Migrations/: docker-compose.yml  migrate.js  mysql.sql  package-lock.json  package.json  postgres.sql
11a_Auth_Integration/: index.html
11b_Auth_Integration/: auth_config.json  index.html  package-lock.json
11b_Payment_Integration/: app.js  env.sample.txt  package-lock.json  package.json
Audio/: index.html
Auth_Integration/: app.js  package.json
CORS/: index.html
Database_Access_Assignment/: script.txt
Database_Documentation/: README.md  docker-compose.yml  package-lock.json  package.json  script.sql
Database_Migrations/python_alembic/: pyproject.toml
Embedded_Youtube/: index.html
Environment_Variables/py/: main.py  pyproject.toml
Github_Webhooks/: app.js  package-lock.json  package.json
MPEG-DASH/: app.js  package-lock.json  package.json
Payment/: paymentiframe.html
Payment_Integration/: index.html
Python_Virtual_Environments/: README.md  main.py
Python_Virtual_Environments/poetry/: pyproject.toml
Short_Polling/: app.js  package-lock.json  package.json
(+117 files in other folders)
