[project]
name = "py"
version = "0.0.1"
description = "environment variables"
authors = [
    {name = "math92n4",email = "math92n4@stud.kea.dk"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv (>=1.0.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
