[project]
name = "poetry"
version = "0.1.0"
description = ""
authors = [
    {name = "math92n4",email = "math92n4@stud.kea.dk"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "emoji (>=2.14.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
